test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/duplicate_labels.plx
#  Label names must be unique within a function 
pub fn main(none) i32 {
    x: i32 = 0
    label label1
    x = 1
    label label1
    return 2
}
